# pdax-python-chip

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.md
.github/workflows/: python-app.yml
core/app/: bank.py
core/domain/: account.py  account_statement.py  customer.py  transaction.py
core/infrastructure/: provider.py
core/infrastructure/postgres/: __init__.py  account.py  customer.py  transaction.py
core/repository/: account.py  customer.py  transaction.py
core/setting/: setting.py
core/setting/db/: postgres.py
core/usecase/: account.py  account_statement.py  customer.py  transaction.py
tests/: test_bank.py
