[tool.poetry]
name = "banking"
version = "0.1.0"
description = ""
authors = ["kurojs <thanhchi.fit.hcmus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
flake8 = "^6.1.0"
pytest = "^7.4.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
